@@ -5,7 +5,9 @@ HISTORY
 1.2.8 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Support RichTextValues from plone.app.textfield when determining the mimetype
+  of the field being edited.
+  [davisagli]
 
 
 1.2.7 (2011-07-05)
